tests/inter/fail/illegal-037.dcf
void main(){
    // const fields require an initializer
    const int a[150], b;
}